new Slides and Resources

--- a/talks.html
+++ b/talks.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">purrr tutorial</a>
+      <a class="navbar-brand" href="index.html">BioMarin R meetup tutorials</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -311,45 +311,18 @@ $(document).ready(function () {
 </div>
 
 
-<p>Talks related to purrr.</p>
-<div id="hands-on-workshop" class="section level3">
-<h3>Hands-on workshop</h3>
-<p>I’ve given 2 - 4 hour hands-on workshops on purrr, e.g., at Latin-R in Buenos Aires, September 2018. I use these slides to complement the live coding.</p>
-<script async class="speakerdeck-embed" data-id="be53cc331a0b4246b343802a4eca037b" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jennybc/purrr-workshop" title="How to repeat yourself with purrr" target="_blank">How to repeat yourself with purrr</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+<p>Slide decks for each workshop</p>
+<div id="reproducible-data-analysis-with-r" class="section level3">
+<h3><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html">Reproducible Data Analysis With R</a></h3>
 </div>
+<div id="data-manipulation-with-r-an-introduction-to-the-dplyr-package" class="section level3">
+<h3><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html">Data Manipulation with R: An introduction to the dplyr package</a></h3>
 </div>
-<div id="rstudioconf-2017" class="section level3">
-<h3>rstudio::conf 2017</h3>
-<script async class="speakerdeck-embed" data-id="8d8ba68c2ba14d42954fa2c96cf8bd5d" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jennybc/putting-square-pegs-in-round-holes-using-list-cols-in-your-dataframe" title="Using list-cols in your dataframe" target="_blank">Using list-cols in your dataframe</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+<div id="data-reshaping-in-r-reshaping-transforming-and-joining-data-in-r" class="section level3">
+<h3><a href="https://mjfrigaard.github.io/data-transformations-joins/Index.html">Data Reshaping in R: reshaping, transforming, and joining data in R</a></h3>
 </div>
-<p>Scripts</p>
-<ul>
-<li>Trump tweet preparation: <a href="talks/trump-tweets-setup.R">trump-tweets-setup.R</a></li>
-<li>Trump tweet list-column example: <a href="talks/trump-tweets.R">trump-tweets.R</a></li>
-<li>Game of Thrones POV character list-column example: <a href="talks/got-pov.R">got-pov.R</a></li>
-<li>Gapminder nested data frame example <em>no separate script</em></li>
-<li>All 3 are now incorporated into <a href="ls13_list-columns.html">List-columns</a>.</li>
-</ul>
-</div>
-<div id="data-rectangling" class="section level3">
-<h3>Data Rectangling</h3>
-<p>Various versions given at EARL Boston 2015, Plotcon NY 2016, Johns Hopkins Biostat Seminar</p>
-<script async class="speakerdeck-embed" data-id="907f3dc0cdb5496c8d35efca70e5f6bd" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jennybc/data-rectangling" title="Data rectangling" target="_blank">Data rectangling</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
-</div>
-</div>
-<div id="summerfall-teaching" class="section level3">
-<h3>2016 summer/fall teaching</h3>
-<p>Selected slides I’ve shown before and during live-coding in class:</p>
-<script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
-</div>
+<div id="introduction-to-data-visualization-with-ggplot2" class="section level3">
+<h3><a href="https://mjfrigaard.github.io/data-viz-intro/Index.html#1">Introduction to Data Visualization with ggplot2</a></h3>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
