--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">purrr tutorial</a>
+      <a class="navbar-brand" href="index.html">BioMarin R meetup tutorials</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="talks.html">Talks</a>
+  <a href="slides.html">Slides</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -339,12 +339,12 @@ $(document).ready(function () {
 ##  collate  en_US.UTF-8                 
 ##  ctype    en_US.UTF-8                 
 ##  tz       America/Phoenix             
-##  date     2020-11-22                  
+##  date     2020-11-23                  
 ## 
 ## ─ Packages ───────────────────────────────────────────────────────────────────
 ##  package     * version date       lib source        
 ##  assertthat    0.2.1   2019-03-21 [1] CRAN (R 4.0.0)
-##  cli           2.1.0   2020-10-12 [1] CRAN (R 4.0.2)
+##  cli           2.2.0   2020-11-20 [1] CRAN (R 4.0.2)
 ##  crayon        1.3.4   2017-09-16 [1] CRAN (R 4.0.0)
 ##  digest        0.6.27  2020-10-24 [1] CRAN (R 4.0.2)
 ##  ellipsis      0.3.1   2020-05-15 [1] CRAN (R 4.0.0)
@@ -352,7 +352,7 @@ $(document).ready(function () {
 ##  glue          1.4.2   2020-08-27 [1] CRAN (R 4.0.2)
 ##  lifecycle     0.2.0   2020-03-06 [1] CRAN (R 4.0.0)
 ##  magrittr      2.0.1   2020-11-17 [1] CRAN (R 4.0.3)
-##  pillar        1.4.6   2020-07-10 [1] CRAN (R 4.0.0)
+##  pillar        1.4.7   2020-11-20 [1] CRAN (R 4.0.2)
 ##  pkgconfig     2.0.3   2019-09-22 [1] CRAN (R 4.0.0)
 ##  purrr         0.3.4   2020-04-17 [1] CRAN (R 4.0.0)
 ##  repurrrsive   1.0.0   2019-07-15 [1] CRAN (R 4.0.2)
