--- a/ex24_xml-wrangling.html
+++ b/ex24_xml-wrangling.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">purrr tutorial</a>
+      <a class="navbar-brand" href="index.html">BioMarin R meetup tutorials</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="talks.html">Talks</a>
+  <a href="slides.html">Slides</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
