--- a/ls02_map-extraction-advanced.html
+++ b/ls02_map-extraction-advanced.html
@@ -359,7 +359,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">purrr tutorial</a>
+      <a class="navbar-brand" href="index.html">BioMarin R meetup tutorials</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -370,7 +370,7 @@ div.tocify {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="talks.html">Talks</a>
+  <a href="slides.html">Slides</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
