--- a/more-resources.html
+++ b/more-resources.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">purrr tutorial</a>
+      <a class="navbar-brand" href="index.html">BioMarin R meetup tutorials</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="more-resources.html">More resources</a>
 </li>
 <li>
-  <a href="talks.html">Talks</a>
+  <a href="slides.html">Slides</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -311,25 +311,52 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;"></p>
+<div id="general-r-resources" class="section level2">
+<h2>General R Resources</h2>
 <ul>
-<li>On CRAN: <a href="https://CRAN.R-project.org/package=purrr" class="uri">https://CRAN.R-project.org/package=purrr</a></li>
-<li>Development on GitHub: <a href="https://github.com/hadley/purrr" class="uri">https://github.com/hadley/purrr</a></li>
-<li>Coverage in <a href="http://r4ds.had.co.nz">R for Data Science</a>
-<ul>
-<li><a href="http://r4ds.had.co.nz/iteration.html">Iteration</a></li>
-<li><a href="http://r4ds.had.co.nz/hierarchy.html">Handling hierarchy</a></li>
-<li><a href="http://r4ds.had.co.nz/many-models.html">Many models</a></li>
-</ul></li>
-<li>Example lists are in the repurrrsive package:
-<ul>
-<li><a href="https://cran.r-project.org/package=repurrrsive" class="uri">https://cran.r-project.org/package=repurrrsive</a></li>
-</ul></li>
-<li>Depicting R data structures and operations via lego:
-<ul>
-<li><a href="https://github.com/jennybc/lego-rstats#readme">https://github.com/jennybc/lego-rstats</a></li>
-</ul></li>
+<li><p><a href="https://r4ds.had.co.nz/">R for Data Science</a></p></li>
+<li><p><a href="https://adv-r.hadley.nz/">Advanced R</a></p></li>
+<li><p><a href="https://rstudio-education.github.io/hopr/r-objects.html">Hands on Programming with R</a></p></li>
+<li><p><a href="https://cran.r-project.org/doc/manuals/r-release/R-lang.html#Objects">R Language Definition</a></p></li>
+<li><p><a href="https://www.tidyverse.org/">Tidyverse</a></p></li>
+<li><p><a href="https://rviews.rstudio.com/">RViews Community Blog</a></p></li>
 </ul>
+</div>
+<div id="r-markdown-resources" class="section level2">
+<h2>R Markdown Resources</h2>
+<ul>
+<li><p><strong>YAML</strong>: check out the <a href="https://r-lib.github.io/ymlthis/"><code>ymlthis</code> package</a> for tools and documentation for working with YAML</p></li>
+<li><p><strong>Markdown</strong>: <a href="https://commonmark.org/help/tutorial">Commonmark</a> has a quick ten-twenty minute tutorial on markdown.</p></li>
+<li><p><a href="https://bookdown.org/yihui/rmarkdown/">R Markdown</a>: A comprehensive but friendly introduction to R Markdown and friends. Free online!</p></li>
+<li><p><a href="http://r4ds.had.co.nz/">R for Data Science</a>: A comprehensive but friendly introduction to the tidyverse. Free online.</p></li>
+<li><p><a href="https://rmd4sci.njtierney.com/">R Markdown for Scientists</a>: R Markdown for Scientists workshop material</p></li>
+</ul>
+</div>
+<div id="resources-for-data-manipluation" class="section level2">
+<h2>Resources for Data Manipluation</h2>
+<ul>
+<li><p><a href="https://r4ds.had.co.nz/transform.html">R for Data Science</a></p></li>
+<li><p><a href="https://cengel.github.io/R-data-wrangling/">Data Wrangling with R</a></p></li>
+<li><p><a href="https://stackoverflow.com/questions/tagged/dplyr">Stack Overflow questions tagged with <code>dplyr</code></a></p></li>
+<li><p><a href="https://community.rstudio.com/tag/dplyr">RStudio Community posts tagged <code>dplyr</code></a></p></li>
+</ul>
+</div>
+<div id="resources-for-data-tidying" class="section level2">
+<h2>Resources for Data Tidying</h2>
+<ul>
+<li><p><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science</a></p></li>
+<li><p><a href="https://stackoverflow.com/questions/tagged/tidyr">Stack Overflow questions tagged with <code>tidyr</code></a></p></li>
+<li><p><a href="https://community.rstudio.com/tag/tidyr">RStudio Community posts tagged <code>tidyr</code></a></p></li>
+</ul>
+</div>
+<div id="data-visualization-resources" class="section level2">
+<h2>Data Visualization Resources</h2>
+<ul>
+<li><p>The <a href="https://ggplot2-book.org/"><code>ggplot2</code> book</a></p></li>
+<li><p><a href="https://ggplot2.tidyverse.org/"><code>ggplot2</code></a> on the tidyverse website</p></li>
+<li><p><a href="https://flowingdata.com/">Flowing Data</a></p></li>
+</ul>
+</div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
