--- a/slides.html
+++ b/slides.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Examples</title>
+<title>Slides</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -25,8 +25,6 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/anchor-sections-1.0.1/anchor-sections.css" rel="stylesheet" />
 <script src="site_libs/anchor-sections-1.0.1/anchor-sections.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -308,49 +306,19 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Lessons and Examples</h1>
+<h1 class="title toc-ignore">Slides</h1>
 
 </div>
 
 
-<div id="background-basics" class="section level3">
-<h3>Background basics</h3>
+<div id="slide-decks-for-each-workshop" class="section level3">
+<h3>Slide decks for each workshop</h3>
 <ul>
-<li><a href="bk00_vectors-and-lists.html">Vectors and lists</a> <em>review of vectors, lists, and indexing</em></li>
-<li><a href="bk01_base-functions.html">Relationship to base and plyr functions</a> <em>side-by-side workflow comparison</em></li>
+<li><p><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html">Reproducible Data Analysis With R</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html">Data Manipulation with R: An introduction to the dplyr package</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-transformations-joins/Index.html">Data Reshaping in R: reshaping, transforming, and joining data in R</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-viz-intro/Index.html#1">Introduction to Data Visualization with ggplot2</a></p></li>
 </ul>
-</div>
-<div id="core-purrr-lessons" class="section level3">
-<h3>Core purrr lessons</h3>
-<ul>
-<li><a href="ls00_inspect-explore.html">Explore the example lists: Wes Anderson, Game of Thrones, GitHub</a> <em>how to get to know a list</em></li>
-<li><a href="ls01_map-name-position-shortcuts.html">Introduction to <code>map()</code>: extract elements</a> <em>name and position shortcuts, type-specific and simplifying map</em></li>
-<li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
-<li><a href="ls03_map-function-syntax.html">Specifying the function in map() + parallel mapping</a> <em>all the purrr shortcuts and mapping over multiple lists</em></li>
-<li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for live-coding</em></li>
-<li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a><br />
-</li>
-<li><a href="ls13_list-columns.html">List columns</a> <em>creating, managing, and eliminating list-columns</em></li>
-</ul>
-</div>
-<div id="worked-examples" class="section level3">
-<h3>Worked examples</h3>
-<ul>
-<li><a href="ex20_bulk-gmail.html">Send email via Gmail API</a><br />
-</li>
-<li><a href="ex22_github-issues-pull-requests.html">Analyze GitHub issues and pull requests</a><br />
-</li>
-<li><a href="ex24_xml-wrangling.html">Tame XML from Google Sheets API</a><br />
-</li>
-<li><a href="ex26_ny-food-market-json.html">Food Markets in New York</a> <em>from JSON to data frame</em></li>
-</ul>
-</div>
-<div id="patterns-and-anti-patterns" class="section level3">
-<h3>Patterns and anti-patterns</h3>
-<ul>
-<li><a href="pt00_gotchas.html">Gotchas</a></li>
-</ul>
-<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
