new build (fix typos)

--- a/bk00_functions-and-objects.html
+++ b/bk00_functions-and-objects.html
@@ -387,9 +387,9 @@ div.tocify {
 </div>
 
 
-<div id="motivation" class="section level1">
-<h1>Motivation</h1>
-<p>This document contains some exercises on R functions and data objects. Check out the slides <a href="">here.</a></p>
+<div id="objectives" class="section level1">
+<h1>Objectives</h1>
+<p>This document contains a basic exposure to R functions and data objects. Check out the slides <a href="">here</a></p>
 <div id="r-syntax" class="section level2 tabset">
 <h2 class="tabset">R Syntax</h2>
 <p>Two major elements in R programming: functions and objects.</p>
