--- a/bk01_workflow-best-practices.html
+++ b/bk01_workflow-best-practices.html
@@ -387,13 +387,12 @@ div.tocify {
 </div>
 
 
-<div id="motivation" class="section level1">
-<h1>Motivation</h1>
-<p>This document covers managing your code, data, and files with RStudio. We will start with a tour of the IDE, and some of the custom settings that you can do to increase your productivity.</p>
+<div id="objectives" class="section level1">
+<h1>Objectives</h1>
+<p>This document covers managing your code, data, and files with RStudio. The sections below give a tour of the IDE, and some of the custom settings that you can do to increase your productivity.</p>
 <div id="global-settings" class="section level2">
 <h2>Global Settings</h2>
-<p>We will cover settings in the following sections:</p>
-<p><img src="img/setting-options.png" width="30%" height="30%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>These can be found under <strong>Tools &gt; Global Options…</strong></p>
 </div>
 <div id="general" class="section level2 tabset">
 <h2 class="tabset">General</h2>
