--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Examples</title>
+<title>Lessons and Exercises</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -308,7 +308,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Lessons and Examples</h1>
+<h1 class="title toc-ignore">Lessons and Exercises</h1>
 
 </div>
 
