--- a/index.html
+++ b/index.html
@@ -335,7 +335,9 @@ $(document).ready(function () {
 </div>
 <div id="data-visualization" class="section level3">
 <h3>Data Visualization</h3>
-<p><em>coming soon!</em></p>
+<ul>
+<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>exercises for introducing ggplot2</em></li>
+</ul>
 </div>
 <div id="dashboards-and-shiny" class="section level3">
 <h3>Dashboards and Shiny</h3>
